force-app/main/default/objects/Avocette_Settings__mdt/Avocette_Settings__mdt.object-meta.xml
<CustomObject>
    <label>Avocette Settings</label>
    <pluralLabel>Avocette Settings</pluralLabel>
</CustomObject>