force-app/main/default/objects/Avocette_Settings__mdt/fields/Boolean_Value__c.field-meta.xml
<CustomField>
    <fullName>Boolean_Value__c</fullName>
    <defaultValue>false</defaultValue>
    <description>a setting may have a boolean value, a string value, or a numeric value</description>
    <label>Boolean Value</label>
    <type>Checkbox</type>
</CustomField>