force-app/main/default/objects/Avocette_Settings__mdt/fields/HelpInfo__c.field-meta.xml
<CustomField>
    <fullName>HelpInfo__c</fullName>
    <label>HelpInfo</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>