force-app/main/default/objects/Avocette_Settings__mdt/fields/Numeric_Value__c.field-meta.xml
<CustomField>
    <fullName>Numeric_Value__c</fullName>
    <description>a setting may have a boolean value, a string value, or a numeric value</description>
    <label>Numeric Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>