force-app/main/default/objects/Avocette_Settings__mdt/fields/String_Value__c.field-meta.xml
<CustomField>
    <fullName>String_Value__c</fullName>
    <description>a setting may have a boolean value, a string value, or a numeric value</description>
    <label>String Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>